[package]
edition = "2024"
name    = "kcam"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "x11",
    "wayland",
] }
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
env_logger = { version = "0.11", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
log = "0.4"
v4l = { version = "0.14" }
